--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fastify-plugin": "^4.5.1"
   },
   "peerDependencies": {
-    "fastify": "^4"
+    "fastify": "^4",
+    "lite-jsx": "^1"
   }
 }
