build: add src to sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.projectKey=lite-jsx_fastify
 sonar.sourceEncoding=UTF-8
 sonar.verbose=true
 
-sonar.sources=src/
+sonar.sources=src/**/*.js
 sonar.language=js
 
-sonar.tests=tests/
+sonar.tests=src/**/*.spec.js
 sonar.coverage.exclusions=**/*
