build: change src in sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.projectKey=lite-jsx_fastify
 sonar.sourceEncoding=UTF-8
 sonar.verbose=true
 
-sonar.sources=src/**/*.js
+sonar.sources=lib
 sonar.language=js
 
-sonar.tests=src/**/*.spec.js
+sonar.test.inclusions=**/*.spec.js
 sonar.coverage.exclusions=**/*
