--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "fastify-plugin": "^4.5.1"
   },
   "peerDependencies": {
-    "fastify": "^4",
-    "lite-jsx": "^1"
+    "@lite-jsx/core": "^2.0.0",
+    "fastify": "^4"
   }
 }
